--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -4,5 +4,8 @@ KERNEL_ARCH_LDFLAGS=
 KERNEL_ARCH_LIBS=
  
 KERNEL_ARCH_OBJS=\
-$(ARCHDIR)/boot.o \
+$(ARCHDIR)/boot2.o \
 $(ARCHDIR)/tty.o \
+$(ARCHDIR)/setuppaging.o \
+$(ARCHDIR)/gdt.o \
+$(ARCHDIR)/idt.o \
