--- a/libc/Makefile
+++ b/libc/Makefile
@@ -33,11 +33,13 @@ stdio/printf.o \
 stdio/putchar.o \
 stdio/puts.o \
 stdlib/abort.o \
+stdlib/itoa.o \
 string/memcmp.o \
 string/memcpy.o \
 string/memmove.o \
 string/memset.o \
 string/strlen.o \
+string/strcpy.o \
  
 HOSTEDOBJS=\
 $(ARCH_HOSTEDOBJS) \
